# MalthusJAX_old

./: .gitignore  .readthedocs.yaml  LEVEL2_IMPLEMENTATION_SUMMARY.md  LICENSE  Level3_Engine_Architecture.md  Makefile  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/api/: malthusjax.core.base.rst  malthusjax.core.fitness.base.rst  malthusjax.core.fitness.binary_ones.rst  malthusjax.core.fitness.linear_gp.rst  malthusjax.core.fitness.permutation.rst  malthusjax.core.fitness.real.rst  malthusjax.core.fitness.rst  malthusjax.core.genome.base.rst  malthusjax.core.genome.binary.rst  malthusjax.core.genome.categorical.rst  malthusjax.core.genome.real.rst  malthusjax.core.genome.rst  malthusjax.core.genome.tree_operand.rst  malthusjax.core.rst  malthusjax.engine.BasicMalthusEngine.rst  malthusjax.engine.base.rst  malthusjax.engine.rst  malthusjax.engine.state.rst  malthusjax.operators.base.rst  malthusjax.operators.crossover.base.rst  malthusjax.operators.crossover.binary.rst  malthusjax.operators.crossover.categorical.rst  malthusjax.operators.crossover.permutation.rst  malthusjax.operators.crossover.real.rst  malthusjax.operators.crossover.rst  malthusjax.operators.mutation.base.rst  malthusjax.operators.mutation.binary.rst  malthusjax.operators.mutation.categorical.rst  malthusjax.operators.mutation.permutation.rst  malthusjax.operators.mutation.real.rst  malthusjax.operators.mutation.rst  malthusjax.operators.rst  malthusjax.operators.selection.base.rst  malthusjax.operators.selection.roulette.rst  malthusjax.operators.selection.rst  malthusjax.operators.selection.tournament.rst  malthusjax.rst  modules.rst
examples/: 1_trial_genomes4trees.ipynb  Demo_LV_1.ipynb  Demo_LV_2.ipynb  Demo_LV_3.ipynb  Demo_Level4_Visualization.ipynb  L3_Engine_Scratchpad.ipynb  L3_Research_Scratchpad.ipynb  L3_callbacks_Scratchpad.ipynb  L3_callbacks_Scratchpad_final.ipynb  L3_fde_Scratchpad.ipynb  Level_1_Demo.ipynb  Level_2_Demo.ipynb  Level_3_Demo final.ipynb  demo_level1.ipynb  demo_level2.ipynb  fitness_functions_demo.py  lv1_scratchpad.ipynb  lv1_scratchpad_2.ipynb  lv1_scratchpad_santa.ipynb
examples/demos/: 1demo_fitness_evaluators.ipynb  1demo_genomes.ipynb  1demo_multigenomes.ipynb  1demo_population.ipynb  2demo_.ipynb  2demo_crossovers.ipynb  2demo_mutations.ipynb  2demo_selection.ipynb
src/malthusjax/: __init__.py  compat.py
src/malthusjax/core/: __init__.py  base.py
src/malthusjax/core/fitness/: __init__.py  base.py  binary_evaluators.py  binary_ones.py  evaluators.py  linear_gp.py  linear_gp_evaluator.py  permutation.py  real.py  real_evaluators.py  real_ode.py
src/malthusjax/core/genome/: __init__.py  base.py  binary.py  binary_genome.py  categorical.py  categorical_genome.py  linear.py  permutation.py  real.py  real_genome.py  real_heterogeneous.py  tree_operand.py
src/malthusjax/core/multigenome/: __init__.py  base.py
src/malthusjax/core/population/: __init__.py  base.py  base_old.py  population.py
src/malthusjax/core/solution/: __init__.py  base.py  binary_solution.py
src/malthusjax/engine/: BasicMalthusEngine.py  BasicMalthusEngine_callbacks.py  ProductionEngine.py  ResearchEngine.py  __init__.py  base.py  basic_engine.py  standard.py  state.py  state_callabacks.py
src/malthusjax/models/: __init__.py  base.py  callbacks.py  sequential.py
src/malthusjax/operators/: __init__.py  base.py  genetic_operators_new.py  linear_operators.py
src/malthusjax/operators/crossover/: __init__.py  base.py  binary.py  categorical.py  linear.py  permutation.py  real.py
src/malthusjax/operators/mutation/: __init__.py  base.py  binary.py  categorical.py  linear.py  permuation.py  permutation.py  real.py
src/malthusjax/operators/selection/: __init__.py  base.py  roulette.py  tournament.py
src/malthusjax/visualization/: __init__.py  base.py  multi_run.py  single_run.py
tests/: __init__.py  conftest.py  test_integration.py  test_new_operators.py
tests/core/: __init__.py  test_base.py  test_fitness.py  test_genomes.py
tests/operators/: __init__.py  test_new_paradigm.py
tests/test_core/test_fitness/: test_BinarySumFitnessEvaluator.py  test_Fitness.py  test_KnapsackFitnessEvaluator.py
tests/test_core/test_genome/: test_binary_genome.py
tests/test_core/test_population/: test_population.py
tests/test_core/test_solution/: test_BinarySolution.py
tests/test_operators/test_crossover/: test_CycleCrossover.py  test_Uniformcrossover.py  test_crossover.py
tests/test_operators/test_mutation/: test_BitFlipMutation.py  test_ScrambleMutation.py
tests/test_operators/test_selection/: test_RouletteSelection.py  test_TournamentSelection.py
