[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "malthusjax"
version = "0.1.0"
description = "JAX-based genetic programming framework with tensorized parallelization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Leonardo DiCaterina", email = "20240485@novaims.unl.pt"},
    {name = "Leonardo DiCaterina", email = "leonardo.dicaterina@mail.polimi.it"}
]
maintainers = [
    {name = "Leonardo DiCaterina", email = "20240485@novaims.unl.pt"},
    {name = "Leonardo DiCaterina", email = "leonardo.dicaterina@mail.polimi.it"},    
]
keywords = ["genetic-programming", "evolutionary-computation", "jax", "machine-learning"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0", 
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
    "flax>=0.7.0",
    "chex>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.5.0",  # <-- REPLACES black, flake8, isort
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
]
examples = [
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
]
all = ["malthusjax[dev,docs,examples]"] # This syntax is correct

[project.urls]
Homepage = "https://github.com/LeonardoDiCaterina/MalthusJAX"
Documentation = "https://malthusjax.readthedocs.io"
Repository = "https://github.com/LeonardoDiCaterina/MalthusJAX"
Issues = "https://github.com/LeonardoDiCaterina/MalthusJAX/issues"

# === Tool Configurations ===

[tool.ruff]
# Replaces [tool.black] and [tool.isort]
line-length = 100
target-version = 'py39'

[tool.ruff.lint]
# Replaces flake8
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.format]
# Enable Ruff's formatter (replaces Black)
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--cov", # Enable coverage
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/malthusjax"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
# Replaces --cov-report=term-missing and --cov-report=html
show_missing = true
skip_covered = true
fail_under = 80  # Optional: Enforce a minimum coverage